overflow fix on goal index

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -878,14 +878,14 @@
     z-index: 200;
     background-color: rgba(0, 0, 0, 0.452);
 }
-.edit__modal__parent .preview__parent .preview {
+.edit__modal__parent .preview {
     border: 2px solid white;
 }
-.edit__modal__parent .goal__create .preview__parent .preview
+.edit__modal__parent .goal__create .preview
 {
     top: -250px !important;
 }
-.edit__modal__parent .freepick__parent .freepick
+.edit__modal__parent .freepick
 {
     top: 50px;
 }
@@ -1099,6 +1099,7 @@
     .right__part .flex
     {
         width: 690px;
+        height: 420px;
         padding-left: 10px;
         margin: 0;
         gap: 34px 37px;
@@ -1111,7 +1112,7 @@
         top: 430px;
         left: 175px;
     }
-    .edit__modal__parent .goal__create .preview__parent .preview
+    .edit__modal__parent .goal__create .preview
     {
         top: -150px !important;
     }
